fix modal on mobile

--- a/src/react-components/modal/Modal.scss
+++ b/src/react-components/modal/Modal.scss
@@ -12,6 +12,9 @@
   z-index: 1;
   // width: 100%;
   max-width: 85vw;
+  @media (max-width: 992px) {
+    max-width: 100vw;
+  }
 }
 
 :local(.header) {
